<resources>
    <string name="app_name">MyMap</string>
    <string name="email">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="name">用户名:</string>
    <string name="inputName">请输入用户名</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputPasswordAgain">请再一次输入密码</string>
    <string name="inputEmail">请输入有效邮箱</string>
    <string name="inputVCode">请输入邮箱验证码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>

    <string name="pointButtonDescription">Draw new point</string>
    <string name="polylineButtonDescription">Draw new polyline</string>
    <string name="polygonButtonDescription">Draw new polygon</string>
    <string name="freehandLineButtonDescription">Draw freehand line</string>
    <string name="freehandPolyButtonDescription">Draw freehand polygon</string>
    <string name="undoButtonDescription">Undo</string>
    <string name="redoButtonDescription">Redo</string>
    <string name="stopButtonDescription">Stop</string>
    <string name="startButtonDescription">Start</string>
    <string name="queryButtonDescription">Query</string>
    <string name="addShapefileButtonDescription">addShapefile</string>
    <string name="showLatLon">显示经纬度</string>
    <string name="selectFeature">选择要素</string>
    <string name="myLocation">定位</string>

    <string name="wildfire_feature_server">"http://sampleserver6.arcgisonline.com/arcgis/rest/services/Wildfire/FeatureServer/0"</string>
    <string name="brest_buildings">
        "http://tiles.arcgis.com/tiles/P3ePLMYs2RVChkJx/arcgis/rest/services/Buildings_Brest/SceneServer"</string>
    <string name="shapefile_path">/djData/Data/Public_Art.shp</string>
    <string name="raster_path">/djData/Data/raster-file/Shasta.tif</string>
    <string name="san_francisco_tpk">/djData/Data/SanFrancisco.tpk</string>
    <string name="wildfire_sync">"https://sampleserver6.arcgisonline.com/arcgis/rest/services/Sync/WildfireSync/FeatureServer"</string>
    <string name="wildfire_geodatabase">/djData/Data/wildfire.geodatabase</string>
    <string name="gen_geodatabase_button_text">Generate</string>
    <string name="progress_starting">Starting</string>
    <string name="progress_started">Started</string>
    <string name="progress_fetching">Fetching result</string>
    <string name="progress_done">Done</string>
    <string name="file_name">/djData/Data/myGeoDB</string>

    <string-array name="vector_tiled_types">
        <item>Streets</item>
        <item>Navigation Vector</item>
        <item>Topographic</item>
        <item>Topographic Vector</item>
        <item>Gray Canvas</item>
        <item>Gray Canvas Vector</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
