<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    tools:context="com.example.administrator.mymap.DJLog">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/uname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="dj"
            android:hint="@string/inputName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/upassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="10dp"
            android:text="123dj321"
            android:hint="@string/inputPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="75dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="记住密码"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp">

        <Button
            android:id="@+id/login"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:text="@string/login"
            android:textSize="15dp"
            android:background="@drawable/btn_selector"/>
        <Button
            android:id="@+id/register"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:textSize="15dp"
            android:text="@string/register"
            android:background="@drawable/btn_selector"/>
    </LinearLayout>
</LinearLayout>
